新增：运营商管理后台-模板管理-品牌、规格下拉列表（select2实现）

--- a/pinyougou-manager-web/src/main/webapp/admin/specification.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/specification.html
@@ -40,15 +40,14 @@
                                     <div class="btn-group">
                                         <button type="button" class="btn btn-default" title="新建" data-toggle="modal" data-target="#editModal"  ng-click="entity={'specificationOptionList':[]};"><i class="fa fa-file-o"></i> 新建</button>
                                         <button type="button" class="btn btn-default" title="删除" ng-click="dele()"><i class="fa fa-trash-o"></i> 删除</button>
-                                        
                                         <button type="button" class="btn btn-default" title="刷新" onclick="window.location.reload();"><i class="fa fa-refresh"></i> 刷新</button>
                                     </div>
                                 </div>
                             </div>
                             <div class="box-tools pull-right">
                                 <div class="has-feedback">
-							                    规格名称：<input  >									
-									<button class="btn btn-default" >查询</button>                                    
+									规格名称：<input  ng-model="searchEntity.specName">
+									<button class="btn btn-default" ng-click="reloadList()" >查询</button>
                                 </div>
                             </div>
                             <!--工具栏/-->
@@ -75,7 +74,8 @@
 			                          </tr>
 			                      </tbody>
 			                  </table>
-			                  <!--数据列表/-->    
+			                  <!--数据列表/-->
+							<tm-pagination conf="paginationConf"></tm-pagination>
                         </div>
                         <!-- 数据表格 /--> 
                      </div>
