新增：商家系统登录、商家登录加密配置（Bcrypt实现）

--- a/pinyougou-manager-web/src/main/webapp/admin/seller_1.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/seller_1.html
@@ -124,8 +124,8 @@
 							<td>{{entity.name}}</td>
 						</tr>
 						<tr>
-							<td>公司手机</td>
-							<td>{{entity.mobile}}</td>
+							<td>公司法人</td>
+							<td>{{entity.linkmanName}}</td>
 						</tr>
 						<tr>
 							<td>公司电话</td>
