--- a/pinyougou-shop-web/src/main/webapp/admin/goods.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods.html
@@ -46,7 +46,7 @@
                             <div class="pull-left">
                                 <div class="form-group form-inline">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-default" title="新建" ><i class="fa fa-file-o"></i> 新建</button>
+                                        <a href="goods_edit.html" class="btn btn-default" title="新建" ><i class="fa fa-file-o"></i> 新建</a>
                                         <button type="button" class="btn btn-default" title="删除" ><i class="fa fa-trash-o"></i> 删除</button>
                                         <button type="button" class="btn btn-default" title="提交审核" ><i class="fa fa-check"></i> 提交审核</button>
                                         <button type="button" class="btn btn-default" title="屏蔽" onclick='confirm("你确认要屏蔽吗？")'><i class="fa fa-ban"></i> 屏蔽</button>
@@ -99,7 +99,7 @@
 										  {{status[entity.auditStatus]}}
 									  </td>
 									  <td class="text-center">
-										  <button type="button" class="btn bg-olive btn-xs">修改</button>
+										  <a href="goods_edit.html#?id={{entity.id}}" class="btn bg-olive btn-xs">修改</a>
 									  </td>
 								  </tr>
 			                      </tbody>
