新增：搜索页面-查询分类列表

--- a/pinyougou-search-web/src/main/webapp/search.html
+++ b/pinyougou-search-web/src/main/webapp/search.html
@@ -171,10 +171,12 @@
         </div>
         <!--selector-->
         <div class="clearfix selector">
-            <div class="type-wrap">
+            <div class="type-wrap" ng-if="resultMap.categoryList!=null">
                 <div class="fl key">商品分类</div>
                 <div class="fl value">
-                    <a href="#">手机</a> <a href="#">电视</a>
+                    <span ng-repeat="category in resultMap.categoryList">
+                         <a href="#">{{category}}</a>
+                    </span>
                 </div>
                 <div class="fl ext"></div>
             </div>
