新增：SpringBoot框架与短信解决方案(发送短信验证码待解决)

--- a/pinyougou-user-web/src/main/webapp/register.html
+++ b/pinyougou-user-web/src/main/webapp/register.html
@@ -56,7 +56,7 @@
 					<div class="control-group">
 						<label for="inputPassword" class="control-label">短信验证码：</label>
 						<div class="controls">
-							<input type="text" placeholder="短信验证码" class="input-xfat input-xlarge" >  <a href="#" ng-click="sendCode()">获取短信验证码</a>
+							<input type="text" placeholder="短信验证码"  class="input-xfat input-xlarge" ng-model="smscode" >  <a href="" ng-click="sendCode()">获取短信验证码</a>
 						</div>
 					</div>
 					
