新增：商品详情页跟购物车对接（跨域解决方案CORS实现）

--- a/pinyougou-page-web/src/main/webapp/item/149187842867960.html
+++ b/pinyougou-page-web/src/main/webapp/item/149187842867960.html
@@ -344,7 +344,7 @@
                                         </strong>
                                     </div>
                                     <div class="operate">
-                                        <a href="javascript:void(0);" class="sui-btn btn-bordered">加入购物车</a>
+                                        <a class="sui-btn btn-bordered" ng-click="addToCart()">加入购物车</a>
                                     </div>
                                 </div>
                             </li>
