新增：微信支付-检测支付状态

--- a/pinyougou-cart-web/src/main/webapp/pay.html
+++ b/pinyougou-cart-web/src/main/webapp/pay.html
@@ -17,7 +17,7 @@
 
 	</head>
 
-	<body ng-app="pinyougou" ng-controller="payController" ng-init="createNative()">
+	<body ng-app="pinyougou" ng-controller="payController" ng-init="createNative(money)">
 		<!--head-->
 		<div class="top">
 			<div class="py-container">
