新增：秒杀业务-秒杀详情页

--- a/pinyougou-seckill-web/src/main/webapp/seckill-index.html
+++ b/pinyougou-seckill-web/src/main/webapp/seckill-index.html
@@ -181,7 +181,7 @@ $(function(){
 						</div>
 						<div>剩余<b class='owned'>{{pojo.stockCount}}</b>件</div>
 					</div>
-					<a class='sui-btn btn-block btn-buy' href='seckill-item.html#?id={{pojo.id}}' target='_blank'>立即抢购</a>
+					<a class='sui-btn btn-block btn-buy' href='seckill-item.html#?id={{pojo.id}}'>立即抢购</a>
 				</li>
 			</ul>
 		</div>
